--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "emirhan",
   "license": "ISC",
-  "description": "",
+  "description": "adress book backend",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.5.3"
+    "dotenv": "^16.4.5",
+    "express": "^4.20.0",
+    "mongoose": "^8.5.3",
+    "mysql": "^2.18.1"
   }
 }
